Adding rephrasal endpoint
